# restful-rpg

./: MANIFEST.in  README.md  requirements.txt  setup.cfg
src/restful_rpg/: __main__.py  version.py
src/restful_rpg/data/: logger.ini
