[metadata]
name = restful-rpg
version = attr: restful_rpg.version.__version__
url = https://github.com/sunarch/restful-rpg
project_urls =
    Bug Tracker = https://github.com/sunarch/restful-rpg/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    Topic :: Games/Entertainment :: Role-Playing
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = Restful RPG - an API frontent to the Moonscribe RPG engine
long_description = file: README.md
long_description_content_type = text/markdown
keywords = restful,rpg,moonscribe
platforms = Any

[options]
install_requires =
    moonscribe
python_requires = >=3.9
packages = find:
package_dir =
    = src
scripts =
    bin/restful-rpg

[options.entry_points]
console_scripts =
    restful_rpg = restful_rpg.__main__:main

[options.packages.find]
where = src

[options.package_data]
    restful_rpg = data/logger.ini
